feat: add kurang_garam.html

--- a/resep_MiGoreng.html
+++ b/resep_MiGoreng.html
@@ -62,6 +62,8 @@
             <li>Sajikan di piring, tambahkan telur ceplok atau kerupuk sebagai pelengkap.</li>
         </ol>
 
+        <p><a href="kurang_garam.html">Tips: Kurangi Garam</a></p>
+
         <div class="footer">
             <p>✨ Selamat menikmati Mi Goreng buatan sendiri! ✨</p>
         </div>
