--- a/resep_NasiGoreng.html
+++ b/resep_NasiGoreng.html
@@ -55,6 +55,9 @@
       <li>Terakhir masukkan daun bawang, aduk sebentar, lalu angkat.</li>
       <li>Sajikan hangat bersama irisan mentimun, tomat, dan kerupuk.</li>
     </ol>
+
+    <p><a href="kurang_garam.html">Tips: Kurangi Garam</a></p>
+
   </section>
 
   <section class="card">
