--- a/resepsama.html
+++ b/resepsama.html
@@ -53,6 +53,9 @@
       <li>Setelah matang, aduk perlahan agar nasi tidak menggumpal. Diamkan 5 menit sebelum disajikan.</li>
       <li>Sajikan nasi kuning hangat dengan telur rebus, ayam suwir/goreng, bawang goreng, dan irisan mentimun.</li>
     </ol>
+
+    <p><a href="kurang_garam.html">Tips: Kurangi Garam</a></p>
+
   </section>
 
   <section class="card">
